--- a/src/app/finance-managment-component/finance-managment-component.component.css
+++ b/src/app/finance-managment-component/finance-managment-component.component.css
@@ -1,24 +1,27 @@
-.header{
-    height: 70px;
-    width: 90%;
-    margin-top: 10px;
-    text-align: center;
-    color: #CFD8DC;
-    border-bottom: #CFD8DC;
+.header {
+  height: 70px;
+  width: 90%;
+  margin-top: 10px;
+  text-align: center;
+  color: #CFD8DC;
+  border-bottom: #CFD8DC;
 }
-.finance-managment-wrapper{
-    width: 90%;
-    height:100%;
-    color: black;
-  background: rgb(25,43,53);
-  background: radial-gradient(circle, rgba(25,43,53,0.9346113445378151) 100%, rgba(47,62,79,1) 100%);
-    float: left;
+
+.finance-managment-wrapper {
+  width: 90%;
+  height: 100%;
+  color: black;
+  background: rgb(25, 43, 53);
+  background: radial-gradient(circle, rgba(25, 43, 53, 0.9346113445378151) 100%, rgba(47, 62, 79, 1) 100%);
+  float: left;
 }
-.main-finances{
+
+.main-finances {
   float: left;
   width: 75%;
 }
-.rate-wrapper{
+
+.rate-wrapper {
   float: right;
   width: 20%;
 }
