--- a/src/app/finance-managment-component/finance-managment-component.component.html
+++ b/src/app/finance-managment-component/finance-managment-component.component.html
@@ -4,9 +4,10 @@
   </div>
   <hr/>
 
-
   <div class="main-finances">
-
+    <div class="budget-wrapper">
+      <app-budgets></app-budgets>
+    </div>
   </div>
 
   <div class="rate-wrapper">
