Added transaction component. Minor styling fixes. Refactored images.

--- a/src/app/finance-managment-component/finance-managment-component.component.css
+++ b/src/app/finance-managment-component/finance-managment-component.component.css
@@ -30,6 +30,13 @@
 }
 .budget-wrapper{
   width: 35%;
+  float: left;
+}
+
+.transaction-wrapper{
+  width: 50%;
+  float: left;
+  margin-left: 20px;
 }
 
 /*background: #3E4C55;*/
