--- a/src/app/finance-managment-component/finance-managment-component.component.html
+++ b/src/app/finance-managment-component/finance-managment-component.component.html
@@ -8,6 +8,9 @@
     <div class="budget-wrapper">
       <app-budgets></app-budgets>
     </div>
+    <div class="transaction-wrapper">
+      <app-transaction></app-transaction>
+    </div>
   </div>
 
   <div class="rate-wrapper">
