--- a/src/app/budgets/budgets.component.html
+++ b/src/app/budgets/budgets.component.html
@@ -11,7 +11,7 @@
     <div *ngFor="let budget of budgets">
       <div class="clear"></div>
       <div class="budget-item">
-        <img src="assets/wallet.png" class="img-budget-item">
+        <img [src]= 'getSourcePath(budget)' class="img-budget-item invert">
         <div class="budget-item-wrapper">
           <div class="budget-item-header">
             {{budget.totalAmount}} {{budget.currencyType}}
