--- a/src/app/currency/currency.component.css
+++ b/src/app/currency/currency.component.css
@@ -1,5 +1,6 @@
 table {
-  background: #3E4C55;
+  /*background: #3E4C55;*/
+  background: #3B4C54;
   /*border: 2px solid #CFD8DC;*/
 }
 
@@ -10,7 +11,7 @@ th, td {
 }
 
 tr:hover {
-  background-color: #f5f5f5;
+  background-color: #495e68;
 }
 
 th {
