--- a/src/app/navigation-bar/navigation-bar.component.css
+++ b/src/app/navigation-bar/navigation-bar.component.css
@@ -3,10 +3,11 @@ ul {
   margin: 0;
   padding: 0;
   width: 10%;
-  background-color: #3E4C55;
+  background-color: #3B4C54;
   height: 100%;
   float: left;
   text-align: center;
+  color: #959FA9;
 }
 
 li a {
@@ -20,11 +21,11 @@ li a {
 }
 
 li a:hover {
-  background-color: white;
-  color: #3E4C55;
+  filter: invert(96%) saturate(50%) hue-rotate(143deg) brightness(101%) contrast(100%);
 }
 
 .img-menu-item {
+  color: red;
   width: 80px;
   height: 80px;
 }
