--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,8 +1,14 @@
 <ul>
   <!--<li><a routerLink="notes" routerLinkActive="active"><img src="../../assets/plan.png" class="img-menu-item"></a></li>-->
-  <li><a routerLink="notes" routerLinkActive="active"><img src="assets/plan.png" class="img-menu-item"></a></li>
+  <li><a routerLink="notes" routerLinkActive="active"><img src="assets/plan.png" class="img-menu-item invert "></a>
+    Notes
+  </li>
   <!--<li><a routerLink="notes" routerLinkActive="active"><img src="../../assets/maoney.png" class="img-menu-item"></a></li>-->
-  <li><a routerLink="finance" routerLinkActive="active"><img src="assets/maoney.png" class="img-menu-item"></a></li>
+  <li><a routerLink="finance" routerLinkActive="active"><img src="assets/maoney.png" class="img-menu-item invert "></a>
+    Finance
+  </li>
   <!--<li><a routerLink="notes" routerLinkActive="active"><img src="../../assets/growth.png" class="img-menu-item"></a></li>-->
-  <li><a routerLink="notes" routerLinkActive="active"><img src="assets/growth.png" class="img-menu-item"></a></li>
+  <li><a routerLink="notes" routerLinkActive="active"><img src="assets/growth.png" class="img-menu-item  invert"></a>
+    Statistics
+  </li>
 </ul>
