--- a/src/app/finance-managment-component/finance-managment-component.component.css
+++ b/src/app/finance-managment-component/finance-managment-component.component.css
@@ -1,10 +1,20 @@
-.header {
+.header{
   height: 70px;
   width: 90%;
   margin-top: 10px;
-  text-align: center;
   color: #CFD8DC;
   border-bottom: #CFD8DC;
+}
+.date{
+  font-size: 3em;
+  font-weight: 100;
+  float: left;
+  margin-left: 10px;
+}
+.title{
+  font-size: 2em;
+  float: left;
+  margin-left: 35%;
 }
 
 .finance-managment-wrapper {
