--- a/src/app/transaction/transaction.component.css
+++ b/src/app/transaction/transaction.component.css
@@ -5,8 +5,13 @@
   text-align: center;
   color: #CFD8DC;
 }
+.transaction-list-wrapper{
+  overflow: scroll;
+  height: 800px;
+  width: 100%;
+  box-sizing: border-box;
+}
 .transaction-item{
-  height: 50px;
   color: #CFD8DC;
   margin-top: 10px;
   border-bottom: 1px solid #CFD8DC;
@@ -23,14 +28,14 @@
 .clear{
   clear: both;
 }
+
 .transaction-item-wrapper{
   float: left;
-  width: 60%;
+  width: 50%;
   box-sizing: border-box;
 }
 .transaction-item-header{
   width: 100%;
-  height: 25px;
   box-sizing: border-box;
 }
 .transaction-item-value{
@@ -42,10 +47,11 @@
 }
 .transaction-amount-wrapper{
   float: left;
-  width: 20%;
+  width: 25%;
   background: yellow;
   height: 30px;
   padding: 4px;
+  margin-top: 30px;
   text-align: center;
   font-weight: 800;
 }
