--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -8,7 +8,10 @@
     Finance
   </li>
   <!--<li><a routerLink="notes" routerLinkActive="active"><img src="../../assets/growth.png" class="img-menu-item"></a></li>-->
-  <li><a routerLink="notes" routerLinkActive="active"><img src="assets/growth.png" class="img-menu-item  invert"></a>
+  <li><a routerLink="stat" routerLinkActive="active"><img src="assets/growth.png" class="img-menu-item  invert"></a>
     Statistics
+  </li>
+  <li><a routerLink="news" routerLinkActive="active"><img src="assets/news.png" class="img-menu-item  invert"></a>
+    News
   </li>
 </ul>
