Add angular material. Implemented create and view list page.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 body {
   padding: 0px;
   margin: 0px;
@@ -34,3 +36,6 @@ body {
   filter: invert(41%) sepia(17%) saturate(411%) hue-rotate(159deg) brightness(95%) contrast(93%);
 }
 /*.opacity { filter: opacity(80%); }*/
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
