--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="wrapper">
-  <app-navigation-bar></app-navigation-bar>
+  <!--<app-navigation-bar></app-navigation-bar>-->
   <router-outlet></router-outlet>
-  <app-notification></app-notification>
 </div>
