--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,13 @@
 .wrapper {
   /*background: #192B35;*/
   width: 100%;
+  background: #ECEFF1;
+  height: 100%;
+}
+.header{
+  height: 70px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background: #263238;
 }
