--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
+  <div class="header"></div>
   <!--<app-navigation-bar></app-navigation-bar>-->
   <router-outlet></router-outlet>
 </div>
