--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -39,3 +39,21 @@ img{
   height: 100%;
   background: white;
 }
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 400px;
+  margin: 20px auto;
+}
+
+.example-full-width {
+  width: 100%;
+}
+.mat-card-wrapper{
+  width: 60%;
+  margin: 40px auto;
+}
+mat-card-title{
+  text-align: center;
+}
