--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,15 @@
-<div class="login-wrapper" *ngIf="!isLoggedIn()">
-  <form name="form" (ngSubmit)="login()">
-    <label class="login-label" for="name">Username</label>
-    <input type="text" class="form-control" id="name" [(ngModel)]="username" name="name">
-    <label class="login-label" for="pass">Password</label>
-    <input type="password" class="form-control" id="pass" [(ngModel)]="password" name="pass">
-    <div class="form-group">
-      <button class="btn-login">Login</button>
-    </div>
-  </form>
-</div>
+<mat-card class="mat-card-wrapper">
+  <mat-card-title>Вхід в систему</mat-card-title>
+  <div class="login-wrapper" *ngIf="!isLoggedIn()">
+    <form class="example-form" [formGroup]="form" (submit)="login($event)">
+      <mat-form-field class="example-full-width">
+        <input matInput formControlName="username" placeholder="Login">
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <input type="password" formControlName="password" matInput placeholder="Password">
+      </mat-form-field>
+      <button type="submit" mat-raised-button color="primary">Увійти</button>
+    </form>
+  </div>
+</mat-card>
