--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -11,12 +11,12 @@
   <hr/>
   <div class="main-statistics" *ngIf="!isLoaded">
         <div>
-          <canvas baseChart width="500px" height="500px"
-                  [datasets]="chartData"
-                  [chartType]="'line'"
-                  [labels]="chartLabels"
-                  [options]="chartOptions">
-          </canvas>
+          <!--<canvas baseChart width="500px" height="500px"-->
+                  <!--[datasets]="chartData"-->
+                  <!--[chartType]="'line'"-->
+                  <!--[labels]="chartLabels"-->
+                  <!--[options]="chartOptions">-->
+          <!--</canvas>-->
         </div>
   </div>
 </div>
